<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.yonggang.ygcommunity.Activity.Personal.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400px"
        android:background="@mipmap/sign_back">

        <ImageView
            android:id="@+id/img_finish"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_marginStart="30px"
            android:layout_marginTop="30px"
            android:src="@mipmap/pic_back2" />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_centerInParent="true"
            android:textSize="35px"
            android:textColor="#FFFFFF"
            android:text="签到\n领积分"
            android:gravity="center"
            android:background="@mipmap/btn_sign"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/btnPreMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="50px"
            android:layout_toLeftOf="@+id/tvCurrentMonth"
            android:padding="20px"
            android:textSize="50px" />

        <TextView
            android:id="@+id/btnNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50px"
            android:layout_toRightOf="@+id/tvCurrentMonth"
            android:padding="20px"
            android:textSize="50px" />

        <TextView
            android:id="@+id/tvCurrentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="11月"
            android:textColor="#323232"
            android:textSize="50px" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginEnd="40px"
        android:layout_marginStart="40px"
        android:background="#E1E1E1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30px"
            android:layout_marginTop="30px">

            <TableRow>

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/sunday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/monday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/wednesday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/thursday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/friday"
                    android:textColor="@color/canlendar_text_color" />

                <TextView
                    style="@style/dateStyle"
                    android:text="@string/saturday"
                    android:textColor="@color/canlendar_text_color" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginEnd="40px"
        android:layout_marginStart="40px"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30px"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white">

        </android.support.v4.view.ViewPager>
    </LinearLayout>

</LinearLayout>
