<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSystemBack"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/activity_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_finish"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@mipmap/pic_back2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="注册"
            android:textColor="@color/colorBlank"
            android:textSize="25sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:layout_marginTop="30px"
        android:background="#DCDCDC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10px"
            android:layout_marginStart="60px"
            android:src="@mipmap/pic_sign_tel" />

        <EditText
            android:id="@+id/edit_tel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_register_tel"
            android:singleLine="true"
            android:textColor="@color/text_login_edit"
            android:textSize="50px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:layout_marginStart="30px"
        android:background="#DCDCDC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160px"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10px"
            android:layout_marginStart="60px"
            android:src="@mipmap/pic_register_tel" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30px"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_identify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/hint_register_verification"
                android:singleLine="true"
                android:textColor="@color/text_login_edit"
                android:textSize="50px" />

            <TextView
                android:id="@+id/register_send_identify"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/magin_10"
                android:background="@drawable/shape_text_identify"
                android:gravity="center"
                android:padding="@dimen/magin_10"
                android:text="@string/text_verification"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size18" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:background="#DCDCDC" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width55"
        android:layout_marginEnd="@dimen/magin_20"
        android:layout_marginStart="@dimen/magin_20"
        android:layout_marginTop="@dimen/magin_20"
        android:background="@drawable/button_register_login"
        android:text="@string/text_button_next"
        android:textColor="@color/colorBlank"
        android:textSize="@dimen/text_size18" />

</LinearLayout>
